# fix scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -502,13 +502,13 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #2563eb;
+    background: #0369A1;
     border-radius: 4px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #2058d3;
+    background: #0369A1;
 }
 
 .ridesharing_movement_section p {
